fixed errors opacity/visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -657,20 +657,24 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transform: opacity(1) visibility(visible);
-  transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  visibility: visible;
+  opacity: 1;
+
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .backdrop.is-hidden {
-  transform: opacity(0);
-  visibility: hidden;
-  /* pointer-events: none; */
-}
-/* scale: 0.75;
- visibility: hidden;
   opacity: 0;
-  pointer-events: none;
-} */
+  visibility: hidden;
+}
+
+/* visibility: hidden;
+pointer-events: none;
+opacity: 0; */
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.75);
